Pull up the following revisions(s) (requested by buhrow in ticket #1448): 	sys/dev/mii/mii_physubr.c:	revision 1.73 via patch

Make 1000baseT connections work even when the user specifies media 1000baseT
connections with ifconfig(8) rather than only when media auto is specified.
Fixes PR kern/20700.